--- a/css/style.css
+++ b/css/style.css
@@ -24,26 +24,26 @@ body{
 }
 
 .shinchan__headTop{
-    height:13rem;
+    height:10rem;
     width:27rem;
     background:#FAEEE0;
     position:absolute;
     right:0%;
-    top: -75%;
-    border-top-left-radius: 30rem;
-    border-top-right-radius: 3rem 20rem;
+    top: -58%;
     border: 0.3rem solid black;
     border-bottom: none;
+    border-top-left-radius: 10rem;
+    border-top-right-radius: 8rem;
 }
 
 .shinchan__topHear{
-    height:13rem;
+    height:20rem;
     width:27rem;
     border-top-left-radius: 30rem;
     border-top-right-radius: 30rem;
     position:absolute;
-    right:-11%;
-    top: -80%;
+    right:-9%;
+    top: -70%;
     background: black;
     z-index: -1;
     transform: rotate(10deg) scale(1.2);
@@ -59,4 +59,21 @@ body{
     border-bottom-left-radius: 20rem;
     border:0.3rem solid black;
     border-top: none;
+}
+
+.shinchan__ear{
+    background: #FAEEE0;
+    height: 12rem;
+    border-radius: 50%;
+    width: 10rem;
+    left:36rem;
+    top:5rem;
+    position:absolute;
+    border:0.3rem solid black;
+    transform: rotate(0deg);
+    border-left: 0.3rem solid transparent;
+}
+
+.shinchan__ear > path{
+    border: 0.3rem solid black;
 }
