--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ body{
     background:#B26261;
     border-radius: 50%;
     border:0.3rem solid black;
-    top:9rem;
+    top:10rem;
     left:7rem;
     transform: rotate(20deg);
 }
@@ -136,8 +136,6 @@ body{
     border-top: 0.3rem solid black;
     border-radius:50%;
     top:-5rem;
-
-  
 }
 
 .shinchan__brow--left{
@@ -148,4 +146,23 @@ body{
 .shinchan__brow--right{
     right:4rem;
     transform:rotate(4deg);
+}
+
+.shinchan__bigBrow{
+    width: 7rem;
+    height:7rem;
+    position:absolute;
+    border: 1.8rem solid black;
+    border-radius: 2rem;
+    clip-path: polygon(0% 0%, 85% 0%, 0% 85%);
+    top:-50%;
+    transform:rotate(45deg);
+}
+
+.shinchan__bigBrow--left{
+    left:12rem;
+}
+
+.shinchan__bigBrow--right{
+    left:25rem;
 }
