--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body{
 }
 
 .shinchan{
-    
+    transform: scale(1);
 }
 
 .shinchan__head{
@@ -31,7 +31,7 @@ body{
     width:27rem;
     background:var(--skin-color);
     position:absolute;
-    right:5.8%;
+    right:6.3%;
     top: -60%;
     border: 0.3rem solid black;
     border-bottom: none;
@@ -43,11 +43,11 @@ body{
 
 .shinchan__topHear{
     height:20rem;
-    width:27rem;
+    width:25rem;
     border-top-left-radius: 30rem;
     border-top-right-radius: 30rem;
     position:absolute;
-    right:-2%;
+    right:1%;
     top: -60%;
     background: black;
     z-index: -1;
@@ -56,7 +56,7 @@ body{
 
 .shinchan__headBottom{
     height:17rem;
-    width:36rem;
+    width:34rem;
     background:var(--skin-color);;
     border-top-left-radius: 40rem;
     border-bottom-left-radius: 40rem;
@@ -70,16 +70,11 @@ body{
     height: 12rem;
     border-radius: 50%;
     width: 10rem;
-    left:33rem;
+    left:31rem;
     top:3rem;
     position:absolute;
     border:0.3rem solid black;
-    transform: rotate(0deg);
     border-left: 0.3rem solid transparent;
-}
-
-.shinchan__ear > path{
-    border: 0.3rem solid black;
 }
 
 .shinchan__eye{
@@ -141,7 +136,7 @@ body{
 }
 
 .shinchan__brow--left{
-    left:11rem;
+    left:10rem;
     transform:rotate(4deg);
 }
 
@@ -151,20 +146,20 @@ body{
 }
 
 .shinchan__bigBrow{
-    width: 8rem;
-    height:8rem;
+    width: 8.5rem;
+    height:8.5rem;
     position:absolute;
-    border: 1.8rem solid black;
+    border: 2rem solid black;
     border-radius: 2rem;
     clip-path: polygon(0% 0%, 85% 0%, 0% 85%);
-    top:-48%;
+    top:-55%;
     transform:rotate(45deg);
 }
 
 .shinchan__bigBrow--left{
-    left:11rem;
+    left:10rem;
 }
 
 .shinchan__bigBrow--right{
-    left:24rem;
+    left:21.5rem;
 }
