added mobile first media query

--- a/css/style.css
+++ b/css/style.css
@@ -23,21 +23,12 @@ body{
 .card{
     width:40rem;
     height:40rem;
-    background: linear-gradient(145deg, #152aa6, #12238c);    border-radius:5rem;
-    box-shadow: 13px 13px 26px #0e1c70,
-             -13px -13px 26px #1a32c6;
-    transition: 0.2s all;
 }
 
 .card:hover{
     cursor:pointer;
 }
 
-.card:active{
-    background: #14279B;
-    box-shadow: inset 13px 13px 26px #0e1c70,
-            inset -13px -13px 26px #1a32c6;
-}
 .shinchan{
     position:absolute;
     top:53%;
@@ -186,4 +177,21 @@ body{
 
 .shinchan__bigBrow--right{
     left:21.5rem;
+}
+
+@media screen and (min-width: 31.25rem) {
+    .card{
+        width:40rem;
+        height:40rem;
+        background: linear-gradient(145deg, #152aa6, #12238c);    border-radius:5rem;
+        box-shadow: 13px 13px 26px #0e1c70,
+                 -13px -13px 26px #1a32c6;
+        transition: 0.2s all;
+    }    
+
+    .card:active{
+        background: #14279B;
+        box-shadow: inset 13px 13px 26px #0e1c70,
+                inset -13px -13px 26px #1a32c6;
+    }
 }
